feat(linkpad): implement profile-driven proxy client UI with core integration, persistence, and i18n
- add core crate APIs for profile import/refresh/activation/deletion and YAML/base64 subscription parsing
- persist profiles/settings locally and restore on startup
- build Profiles/Proxy Groups/Rules/Settings pages with reusable dashboard components
- support async profile import, notifications, and proxy group selection UX
- refactor theme + i18n structure (en/zh modules) and apply styling across app

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,3 +7,10 @@ license.workspace = true
 description = "Core logic for Linkpad proxy client"
 
 [dependencies]
+reqwest    = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
+serde      = { version = "1.0.228", features = ["derive"] }
+serde_yaml = "0.9.34"
+url        = "2.5.4"
+base64     = "0.22.1"
+percent-encoding = "2.3.2"
+chrono     = "0.4.42"
