feat(core,settings): integrate mihomo runtime and macOS system proxy control
add linkpad-core runtime module (KernelRuntime/SystemProxyManager) with start/stop/restart flow

support kernel binary discovery (LINKPAD_MIHOMO_PATH + common paths) and clearer kernel-not-found errors

wire Settings System Proxy switch to real logic and enforce global proxy-off on disable

add Clash Setting card with port config, core version/path display, and port persistence

extend i18n/state/settings store for new clash/system-proxy fields and notifications

--- a/linkpad/Cargo.toml
+++ b/linkpad/Cargo.toml
@@ -7,7 +7,7 @@ version     = { workspace = true }
 
 [dependencies]
 linkpad-core       = { workspace = true }
-makepad-components = { workspace = true, features = ["Button", "Layout", "Card", "Dropdown", "Input"] }
+makepad-components = { workspace = true, features = ["Button", "Layout", "Card", "Dropdown", "Input", "Switch"] }
 makepad-shell      = { workspace = true }
 dirs               = "6.0.0"
 serde              = { version = "1.0.228", features = ["derive"] }
