--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,11 +7,15 @@ license.workspace = true
 description = "Core logic for Linkpad proxy client"
 
 [dependencies]
-reqwest    = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
-serde      = { version = "1.0.228", features = ["derive"] }
-serde_yaml = "0.9.34"
-url        = "2.5.4"
-base64     = "0.22.1"
-percent-encoding = "2.3.2"
-chrono     = "0.4.42"
-dirs       = "6.0.0"
+reqwest          = { workspace = true }
+serde            = { workspace = true }
+serde_yaml       = { workspace = true }
+serde_json       = { workspace = true }
+url              = { workspace = true }
+base64           = { workspace = true }
+percent-encoding = { workspace = true }
+chrono           = { workspace = true }
+dirs             = { workspace = true }
+flate2           = { workspace = true }
+sha2             = { workspace = true }
+tracing          = { workspace = true }
