--- a/linkpad/Cargo.toml
+++ b/linkpad/Cargo.toml
@@ -9,6 +9,8 @@ version     = { workspace = true }
 linkpad-core       = { workspace = true }
 makepad-components = { workspace = true, features = ["Button", "Layout", "Card", "Dropdown", "Input", "Switch"] }
 makepad-shell      = { workspace = true }
-dirs               = "6.0.0"
-serde              = { version = "1.0.228", features = ["derive"] }
-serde_json         = "1.0.145"
+dirs               = { workspace = true }
+serde              = { workspace = true }
+serde_json         = { workspace = true }
+tracing            = { workspace = true }
+tracing-subscriber = { workspace = true }
