feat(linkpad): modularize app into views/store and add tray + core runtime integration
- split page logic from app.rs into views (profiles/proxy_groups/rules/settings)
- move persistence modules into store/ with a unified store mod
- add system tray menu + tray icon (mode/profile/system proxy/exit)
- improve settings/i18n wiring (close-to-tray, labels, state persistence)
- update core runtime flow for kernel path/upgrade/startup/proxy handling
- add bilingual project docs (README.md and README_zh.md)

--- a/linkpad/Cargo.toml
+++ b/linkpad/Cargo.toml
@@ -8,7 +8,7 @@ version     = { workspace = true }
 [dependencies]
 linkpad-core       = { workspace = true }
 makepad-components = { workspace = true, features = ["Button", "Layout", "Card", "Dropdown", "Input", "Switch"] }
-makepad-shell      = { workspace = true }
+makepad-shell      = { workspace = true, features = ["tray", "app-menu", "menu-model", "platforms"] }
 dirs               = { workspace = true }
 serde              = { workspace = true }
 serde_json         = { workspace = true }
