feat: migrate persistence to robius-directories and release v0.1.4
- use ProjectDirs for app config and kernel install/runtime paths

- add first-run fallback migration for legacy profiles.json

- bump workspace version to 0.1.4

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -16,6 +16,7 @@ base64           = { workspace = true }
 percent-encoding = { workspace = true }
 chrono           = { workspace = true }
 dirs             = { workspace = true }
+robius-directories = { workspace = true }
 flate2           = { workspace = true }
 sha2             = { workspace = true }
 tracing          = { workspace = true }
