--- a/linkpad/Cargo.toml
+++ b/linkpad/Cargo.toml
@@ -9,7 +9,7 @@ version     = { workspace = true }
 linkpad-core       = { workspace = true }
 makepad-components = { workspace = true, features = ["Button", "Layout", "Card", "Dropdown", "Input", "Switch"] }
 makepad-shell      = { workspace = true, features = ["tray", "app-menu", "menu-model", "platforms"] }
-dirs               = { workspace = true }
+robius-directories = { workspace = true }
 serde              = { workspace = true }
 serde_json         = { workspace = true }
 tracing            = { workspace = true }
