--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
 resolver = "3"
 
 [workspace.package]
-version = "0.1.3"
+version = "0.1.4"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 authors = ["Tyrese Luo <tyreseluo@outlook.com>"]
@@ -16,6 +16,7 @@ authors = ["Tyrese Luo <tyreseluo@outlook.com>"]
 linkpad-core       = { path = "crates/core" }
 makepad-components = { git = "https://github.com/Project-Robius-China/makepad-component.git", branch = "main" }
 makepad-shell      = { git = "https://github.com/Project-Robius-China/makepad-shell.git", branch = "main" }
+robius-directories = { git = "https://github.com/project-robius/robius" }
 dirs               = "6.0.0"
 serde              = { version = "1.0.228", features = ["derive"] }
 serde_json         = "1.0.149"
