feat(windows): gate console window hiding behind feature flag
- use hide_windows_console cfg for windows_subsystem=windows

- declare hide_windows_console feature and enable it by default

--- a/linkpad/Cargo.toml
+++ b/linkpad/Cargo.toml
@@ -4,6 +4,9 @@ edition     = { workspace = true }
 license     = { workspace = true }
 version     = { workspace = true }
 
+[features]
+default = ["hide_windows_console"]
+hide_windows_console = []
 
 [dependencies]
 linkpad-core       = { workspace = true }
@@ -35,3 +38,11 @@ out_dir = "./dist"
 
 [package.metadata.packager.macos]
 signing_identity = "-"
+
+## Configuration for `cargo packager`'s generation of a Windows `.exe` setup installer.
+[package.metadata.packager.nsis]
+## See this: <https://nsis.sourceforge.io/Docs/Chapter4.html#varconstant>
+appdata_paths = [
+    "$APPDATA/$PUBLISHER/$PRODUCTNAME",
+    "$LOCALAPPDATA/$PRODUCTNAME",
+]
