feat(windows): support startup/system proxy and silent mihomo runtime
- implement Windows auto-launch + silent-start via Run registry

- implement Windows system proxy toggle and WinInet refresh

- run mihomo and version probes without terminal window

- add --silent-start handling and startup kernel warmup in app

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,3 +20,6 @@ robius-directories = { workspace = true }
 flate2           = { workspace = true }
 sha2             = { workspace = true }
 tracing          = { workspace = true }
+
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinInet"] }
