--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,19 +7,17 @@ license.workspace = true
 description = "Core logic for Linkpad proxy client"
 
 [dependencies]
-reqwest          = { workspace = true }
-serde            = { workspace = true }
-serde_yaml       = { workspace = true }
-serde_json       = { workspace = true }
-url              = { workspace = true }
-base64           = { workspace = true }
-percent-encoding = { workspace = true }
-chrono           = { workspace = true }
-dirs             = { workspace = true }
+linkpad-proxy      = { workspace = true }
+linkpad-startup    = { workspace = true }
+reqwest            = { workspace = true }
+serde              = { workspace = true }
+serde_yaml         = { workspace = true }
+serde_json         = { workspace = true }
+url                = { workspace = true }
+base64             = { workspace = true }
+percent-encoding   = { workspace = true }
+chrono             = { workspace = true }
 robius-directories = { workspace = true }
-flate2           = { workspace = true }
-sha2             = { workspace = true }
-tracing          = { workspace = true }
-
-[target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinInet"] }
+flate2             = { workspace = true }
+sha2               = { workspace = true }
+tracing            = { workspace = true }
